--- a/index.html
+++ b/index.html
@@ -41,18 +41,64 @@
                         </a>
                         <select class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink"
                             id="sel_country" size="6">
-                            <!-- <div class="list_of_countries"></div> -->
-
                         </select>
                     </li>
                 </ul>
             </div>
+            <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                Launch static backdrop modal
+            </button> -->
     </nav>
 
-    <div id="mapid"></div>
+    <div id="mapid" style="width:100%; height:94%;"></div>
 
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js">
-    </script>
+
+
+    <!-- Modal -->
+    <div class="modal fade info" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="country"></h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <table class="table">
+                        <tbody>
+                            <tr>
+                                <th>Currency:</th>
+                                <td id="currency"></td>
+                            </tr>
+                            <tr>
+                                <th>Calling Code:</th>
+                                <td id="calling_code"></td>
+                            </tr>
+                            <tr>
+                                <th>Coordinates:</th>
+                                <td id="coord"></td>
+                            </tr>
+                            <tr>
+                                <th>Continent:</th>
+                                <td id="continent"></td>
+                            </tr>
+                            <tr>
+                                <th>Flag:</th>
+                                <td id="flag"></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+        integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
         integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
@@ -64,51 +110,20 @@
     <script>
         $(document).ready(function () {
             $("#sel_country").empty();
-            // Load screen Map
-            var mymap = L.map('mapid').setView([51.51699, -0.102539], 2.5);
-            L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
-                        maxZoom: 18,
-                        attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors, ' +
-                            'Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
-                        id: 'mapbox/streets-v11',
-                        tileSize: 512,
-                        zoomOffset: -1
-                    }).addTo(mymap);
             $.ajax({
                 type: "GET",
                 dataType: "json",
                 url: "./php/getCountries.php",
                 success: function (data) {
-                    console.log('Great Success');
-                    // console.log(data[0]);
                     $.each(data, function (key, value) {
-                        // console.log(value[1]);
-                        // console.log(value[0]);
                         $("#sel_country").append("<option value=" + value[1] + ">" + value[0] + "</option>");
                     });
                 }
             });
         });
 
-        // function CountryCheck() {
-        //     country_code = $('.country_code').attr('id');
-        //     $.ajax({
-        //         type: "GET",
-        //         url: "./php/countryBorders.php?country_code=" + country_code,
-        //         success: function (data) {
-        //             console.log("Success")
-        //             console.log(data)
-        //             // Call function to update to recenter map with updated coordinates
-        //         }
-        //     });
-        // };
-        // call to api to get lat and long, this needs changing possibly as I'm not sure if it's actually right cause not to sure about this bit especially 
-        // data: {
-        //     country: $('#sel_country option:selected').tetx(),
-        //     lang: $('#selLanguage').val()  
-        // $(document).ready(function () {
-        $('#sel_country').change(function () {
 
+        $('#sel_country').change(function () {
             let countryName = $('#sel_country option:selected').text();
             $.ajax({
                 type: "GET",
@@ -117,69 +132,95 @@
                 success: function (data) {
                     console.log(data);
                     lat = data['data']['lat'];
-                    lng = data['data']['lng'];
+                    lng = data['data']['lng']
+                    getLocation(lat, lng, countryName);
+                    CountryInfo(data)
 
-                    var container = L.DomUtil.get('mapid'); if (container != null) { container._leaflet_id = null; }
-                    var mymap = null
-                    mymap = L.map('mapid').setView([lat, lng], 5);
-
-
-                    L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
-                        maxZoom: 18,
-                        attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors, ' +
-                            'Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
-                        id: 'mapbox/streets-v11',
-                        tileSize: 512,
-                        zoomOffset: -1
-                    }).addTo(mymap);
-
-                    L.marker([lat, lng]).addTo(mymap)
-                        .bindPopup("<h6>Hello!</h6><br />You selected " + countryName).openPopup();
-                    // console.log(result['data'])
-                    // console.log(JSON.stringify(result));
-
-                    // if (result.status.name == "ok") {
-
-                    //     $('#latitude').html(result['data'][0]['lat']);
-                    //     $('#longitude').html(result['data'][0]['lng']);
-                    //     console.log('#latitude');
-                    //     console.log('#longitude');
-                    // }
-
-
-                    // Adds a circle to clicked area
-                    // L.circle([lat, lng], 500, {
-                    //   color: 'red',
-                    //   fillColor: '#f03',
-                    //   fillOpacity: 0.5
-                    // }).addTo(mymap);
-
-                    // Adds a popup with clicked coordinates
-                    var popup = L.popup();
-
-                    function onMapClick(e) {
-                      popup
-                        .setLatLng(e.latlng)
-                        .setContent("You clicked the map at " + e.latlng.toString())
-                        .openOn(mymap);
-                    }
-                    mymap.on('click', onMapClick);
 
                 },
                 error: function (jqXHR, textStatus, errorThrown) {
-                    // your error code
-                    console.log('1112222')
                     console.log(errorThrown);
-
                 }
 
             })
-            
+
         });
 
+        // Temp location for the modal trigger, ideally this should be moved to another function which will call the api's to get
+        // the oountries info
+        function CountryInfo(data) {
+            $('#currency').html(data['currency']);
+            $('#calling_code').html(data['calling']);
+            $('#coord').html(data['coord']['lat'] + ' ' + data['coord']['lng']);
+            $('#continent').html(data['continent']);
+            $('#country').html(data['country']);
+            $('#flag').html(data['flag']);
 
-        // });
+
+            $('.info').modal('show');
+
+        }
+
+        // countryName will not always have a value so assigning a default value which can be overwritten
+        function getLocation(lat, lng, countryName = 'Your home') {
+            var container = L.DomUtil.get('mapid'); if (container != null) { container._leaflet_id = null; }
+            mymap = L.map('mapid').setView([lat, lng], 5);
+
+            L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw',
+                {
+                    maxZoom: 18,
+                    attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors, ' +
+                        'Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
+                    id: 'mapbox/streets-v11',
+                    tileSize: 512,
+                    zoomOffset: -1
+                }).addTo(mymap);
+
+            L.marker([lat, lng]).addTo(mymap)
+                .bindPopup("<h6>Hello!</h6><br />You selected " + countryName).openPopup();
+
+            // Adds a circle to clicked area
+            L.circle([lat, lng], 500, {
+                color: 'red',
+                fillColor: '#f03',
+                fillOpacity: 0.5
+            }).addTo(mymap);
+
+            // Adds a popup with clicked coordinates
+            var popup = L.popup();
+
+            function onMapClick(e) {
+                popup
+                    .setLatLng(e.latlng)
+                    .setContent("You clicked the map at " + e.latlng.toString())
+                    .openOn(mymap);
+            }
+            mymap.on('click', onMapClick);
+        }
     </script>
+
+    <script>
+        // Get current users location and update map to coordinates found
+        $(document).ready(function () {
+            if (navigator.geolocation) {
+                navigator.geolocation.getCurrentPosition(locationSuccess);
+            } else {
+                alert('Your browser does not support location data retrieval or the user declined access.');
+            }
+        });
+
+        function locationSuccess(position) {
+            var lat = position.coords.latitude;
+            var lng = position.coords.longitude;
+            getLocation(lat, lng)
+
+
+        }
+    </script>
+
+    <!-- Button trigger modal -->
+
+
     <!-- <script src="./js/script.js"></script> -->
 </body>
 
