--- a/index.html
+++ b/index.html
@@ -51,10 +51,7 @@
     </nav>
     <div>
         <table>
-            <tr>
-                <th>Capital City:</th>
-                <td id="txtCapital"></td>
-            </tr>
+          <!-- Test button to see in console if apis get data -->
             <tr>
                 <button id="btnRun">Test</button>
             </tr>
