--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                             </tr>
                             <tr>
                                 <th>Wikipedia URL:</th>
-                                <td><a id="wikiUrl" target="_blank"></a></td>
+                                <td id="wikiUrl"></td>
                             </tr>
                             <tr>
                                 <th colspan="2">Wikipedia Summary:</th>
@@ -232,7 +232,8 @@
             // From weatherAPI
             $('#weather').html(weather_data['data']['temperature'] + '°C');
             // From wikipediaAPI
-            $('#wikiUrl').html(wiki_data['data']['wikipediaURL']);
+            // $('#wikiUrl').html(wiki_data['data']['wikipediaURL']);
+            $('#wikiUrl').html('<a href="https://' + $(wiki_data["data"]["wikipedia"]["wikipediaURL"]) + '" target="_blank">Wikipedia Page</a>');
             $('#wiki').html(wiki_data['data']['wikipedia']);
 
 
